# alterate

./: .gitignore  .travis.yml  CMakeLists.txt  README.html  README.md  build.sh  environment.sh.sample
alterate-core/: CMakeLists.txt
alterate-core/inc/alterate/: engine.h  error.h  print.h  resource.h
alterate-core/inc/alterate/gl/: context.h  gl_inc.h  program.h  shader.h  type_info.h  util.h  vertex_buffer.h  vertex_buffer_layout.h
alterate-core/inc/alterate/iterator/: random_access_iterator.h
alterate-core/inc/alterate/math/: functional.h  matrix.h  matrix_builder.h  vec.h
alterate-core/src/alterate/: engine.cpp  system.cpp
alterate-core/src/alterate/gl/: color.cpp  context.cpp  program.cpp  shader.cpp  vertex_buffer_layout.cpp
alterate-main/: CMakeLists.txt
alterate-main/src/alterate/: main.cpp
alterate-math/include/alterate/: algorithm.hpp  iterator.hpp
alterate-math/include/alterate/iterator/: iterator_factory.hpp  scalar_iterator.hpp
alterate-math/test/: CMakeLists.txt
alterate-math/test/alterate/: algorithm.cpp  iterator.cpp
alterate-math/test/alterate/iterator/: iterator_factory.cpp  scalar_iterator.cpp
alterate-test/: CMakeLists.txt
alterate-test/src/: sandbox.cpp  scalar_iterator_test.cpp  vec_test.cpp  vertex_buffer_layout_test.cpp  vertex_buffer_test.cpp
demos/alterate-2048/: CMakeLists.txt
demos/alterate-2048/src/: main.cpp
demos/alterate-pong/: CMakeLists.txt
demos/alterate-pong/src/: main.cpp
sources/: CMakeLists.txt  alterate.sln
sources/alterate/: CMakeLists.txt  alterate.vcxproj  build.props
sources/alterate-core/: CMakeLists.txt
sources/alterate-core/inc/alterate/: bundle.h  debug.h  defs.h  dimension.h  engine.h  platform.h  print.h  resource.h  string.h  system.h  types.h
sources/alterate-core/inc/alterate/gl/: color.h  context.h  gl_inc.h  program.h  shader.h  type_info.h  util.h  vertex_buffer.h  vertex_buffer_layout.h
sources/alterate-core/inc/alterate/iterator/: iterator_factory.h  random_access_iterator_support.h  scalar_iterator.h
sources/alterate-core/inc/alterate/math/: basic_vec.h  functional.h  generic_vector_support.h  matrix.h  transform_builder.h  vec.h  vector_support.h
sources/alterate-core/inc/alterate/timing/: clock.h  timer.h
sources/alterate-core/src/: bundle.cpp  debug.cpp  resource.cpp
sources/alterate-core/src/alterate/: dimension.cpp  engine.cpp  system.cpp
sources/alterate-core/src/alterate/gl/: color.cpp  context.cpp  program.cpp  shader.cpp  type_info.cpp  util.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
sources/alterate-core/src/alterate/timing/: clock.cpp  timer.cpp
sources/alterate-demo-windows/: alterate-demo-windows.vcxproj  main.cpp
sources/alterate-gen/: CMakeLists.txt
sources/alterate-gen/src/: main.cpp  path.cpp  path.h  rc.cpp  rc.h  rc_args.cpp  rc_args.h
sources/alterate-lib/: CMakeLists.txt
sources/alterate-lib/inc/alterate/: types.h
sources/alterate-main/src/alterate/: main.cpp
sources/alterate-rc/: CMakeLists.txt
sources/alterate-rc/src/: main.cpp
sources/alterate-test/: CMakeLists.txt  alterate-test.vcxproj  test_utils.h  vec_test.cpp
sources/alterate-test/src/: basic_vec_test.h  generic_vector_support_test.cpp  iterator_factory_test.cpp  iterator_provider_test.cpp  matrix_test.cpp  pch.h  random_access_iterator_support_test.cpp  sandbox.cpp  scalar_iterator_test.cpp  test_utils.h  vec_test.cpp  vector_support_test.cpp  vertex_buffer_layout_test.cpp  vertex_buffer_test.cpp
sources/alterate-test/src/alterate/: vec_test.cpp
sources/alterate-test/src/alterate/iterable/: iterable_test.cpp  scalar_iterator_test.cpp
sources/alterate-test/src/alterate/iterator/: iterator_provider_test.cpp  random_access_iterator_support_test.cpp  scalar_iterator_test.cpp
sources/alterate-test/src/alterate/math/: vec_test.cpp  vector_support_test.cpp
sources/alterate-test/src/alterate/test/: test_utils.h
sources/alterate/include/alterate/: error.h  platform.h  types.h  vec.h
sources/alterate/include/alterate/core/: vector_support.h
sources/alterate/include/alterate/functional/: functional.h  functors.h
sources/alterate/include/alterate/geometry/: basic_vec.h  rect2d.h  rect2p.h  rect2r.h  vec.h
sources/alterate/include/alterate/iterable/: iterable.h  pointer.h  scalar.h  scalar_iterator.h
sources/alterate/include/alterate/iterator/: iterator_provider.h  random_access_iterator_support.h  scalar.h  scalar_iterator.h
sources/alterate/include/alterate/math/: basic_vec.h  vec.h  vector_support.h
sources/alterate/include/alterate/meta/: copy_const.h  crtp_support.h
sources/alterate/include/alterate/pattern/: crtp_support.h
sources/alterate/src/alterate/: functional.h  functors.h  iterators.h
sources/demos/alterate-2048/src/: main.cpp
sources/demos/alterate-pong/src/: main.cpp
sources/demos/alterate2048/: CMakeLists.txt
sources/demos/alterate2048/res/: app.strings  super_file.txt
sources/demos/alterate2048/src/: main.cpp  resources.cpp  resources.h
